--- a/helm-app/templates/service.yaml
+++ b/helm-app/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helm-app.fullname" . }}
-  labels:
-    {{- include "helm-app.labels" . | nindent 4 }}
+  name: sample-app
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      targetPort: 80
+      nodePort: {{ .Values.service.nodePort }}
   selector:
-    {{- include "helm-app.selectorLabels" . | nindent 4 }}
+    app: sample-app
